--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
-MONGODB_URI=""
-PORT=""
-JWT_SECRET=""
-CLOUDINARY_CLOUD_NAME=''
-CLOUDINARY_API_KEY=''
-CLOUDINARY_API_SECRET=''
+MONGODB_URI="mongodb+srv://sanketmudhulkar98:sanket123@cluster0.nekyjl2.mongodb.net"
+PORT=5000
+JWT_SECRET="sm#secret"
+CLOUDINARY_CLOUD_NAME='dtn7mxozu'
+CLOUDINARY_API_KEY='725116132926817'
+CLOUDINARY_API_SECRET='OPLFK49GG6cHmOcVz_iM33T207c'
